--- a/content/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range.mdx
+++ b/content/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range.mdx
@@ -1,10 +1,244 @@
----
-title: Filters Transaction Feeds by Date Range
----
-# Filters Transaction Feeds by Date Range
+# filters transaction feeds by date range
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Before continuing, make sure you have read the [Transaction Feeds Overview & Setup](Transaction%20Feeds%20Overview%20&%20Setup%20375cb80b08844b928872ac8780b9718c.md) lesson first.
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+```jsx
+describe("filters transaction feeds by date range", function () {
+  if (isMobile()) {
+    it("closes date range picker modal", () => {
+      cy.getBySelLike("filter-date-range-button").click({ force: true })
+      cy.get(".Cal__Header__root").should("be.visible")
+      cy.visualSnapshot("Mobile Open Date Range Picker")
+      cy.getBySel("date-range-filter-drawer-close").click()
+      cy.get(".Cal__Header__root").should("not.exist")
+      cy.visualSnapshot("Mobile Close Date Range Picker")
+    })
+  }
+
+  _.each(feedViews, (feed, feedName) => {
+    it(`filters ${feedName} transaction feed by date range`, function () {
+      cy.database("find", "transactions").then((transaction: Transaction) => {
+        const dateRangeStart = startOfDay(new Date(transaction.createdAt))
+        const dateRangeEnd = endOfDayUTC(addDays(dateRangeStart, 1))
+
+        cy.getBySelLike(feed.tab).click().should("have.class", "Mui-selected")
+
+        cy.wait(`@${feed.routeAlias}`)
+          .its("response.body.results")
+          .as("unfilteredResults")
+
+        cy.pickDateRange(dateRangeStart, dateRangeEnd)
+
+        cy.wait(`@${feed.routeAlias}`)
+          .its("response.body.results")
+          .then((transactions: Transaction[]) => {
+            cy.getBySelLike("transaction-item").should(
+              "have.length",
+              transactions.length
+            )
+
+            transactions.forEach(({ createdAt }) => {
+              const createdAtDate = startOfDayUTC(new Date(createdAt))
+
+              expect(
+                isWithinInterval(createdAtDate, {
+                  start: startOfDayUTC(dateRangeStart),
+                  end: dateRangeEnd,
+                }),
+                `transaction created date (${createdAtDate.toISOString()})
+                  is within ${dateRangeStart.toISOString()}
+                  and ${dateRangeEnd.toISOString()}`
+              ).to.equal(true)
+            })
+
+            cy.visualSnapshot("Date Range Filtered Transactions")
+          })
+
+        cy.log("Clearing date range filter. Data set should revert")
+        cy.getBySelLike("filter-date-clear-button").click({
+          force: true,
+        })
+        cy.getBySelLike("filter-date-range-button").should("contain", "ALL")
+
+        cy.get("@unfilteredResults").then((unfilteredResults) => {
+          cy.wait(`@${feed.routeAlias}`)
+            .its("response.body.results")
+            .should("deep.equal", unfilteredResults)
+          cy.visualSnapshot("Unfiltered Transactions")
+        })
+      })
+    })
+
+    it(`does not show ${feedName} transactions for out of range date limits`, function () {
+      const dateRangeStart = startOfDay(new Date(2014, 1, 1))
+      const dateRangeEnd = endOfDayUTC(addDays(dateRangeStart, 1))
+
+      cy.getBySelLike(feed.tab).click()
+      cy.wait(`@${feed.routeAlias}`)
+
+      cy.pickDateRange(dateRangeStart, dateRangeEnd)
+      cy.wait(`@${feed.routeAlias}`)
+
+      cy.getBySelLike("transaction-item").should("have.length", 0)
+      cy.getBySel("empty-list-header").should("contain", "No Transactions")
+      cy.getBySelLike("empty-create-transaction-button")
+        .should("have.attr", "href", "/transaction/new")
+        .contains("create a transaction", { matchCase: false })
+        .should("have.css", { "text-transform": "uppercase" })
+      cy.visualSnapshot("No Transactions")
+    })
+  })
+})
+```
+
+You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+
+First, we are checking to see if our test is being run inside of a mobile viewport. If so, we ensure that the data range picker works properly on a mobile device by clicking on it to open it, confirming that it is open, and then closing it.
+
+```jsx
+if (isMobile()) {
+  it("closes date range picker modal", () => {
+    cy.getBySelLike("filter-date-range-button").click({ force: true })
+    cy.get(".Cal__Header__root").should("be.visible")
+    cy.visualSnapshot("Mobile Open Date Range Picker")
+    cy.getBySel("date-range-filter-drawer-close").click()
+    cy.get(".Cal__Header__root").should("not.exist")
+    cy.visualSnapshot("Mobile Close Date Range Picker")
+  })
+}
+```
+
+Next, we loop through each property inside the `feedViews` object, which we defined in the `beforeEach()` at the top of the spec file.
+
+```jsx
+const feedViews = {
+    public: {
+      tab: "public-tab",
+      tabLabel: "everyone",
+      routeAlias: "publicTransactions",
+      service: "publicTransactionService",
+    },
+    contacts: {
+      tab: "contacts-tab",
+      tabLabel: "friends",
+      routeAlias: "contactsTransactions",
+      service: "contactTransactionService",
+    },
+    personal: {
+      tab: "personal-tab",
+      tabLabel: "mine",
+      routeAlias: "personalTransactions",
+      service: "personalTransactionService",
+    },
+  };
+
+// ..
+
+_.each(feedViews, (feed, feedName) => {
+```
+
+We then create a test for each `feedView` dynamically.
+
+```jsx
+it.only(`filters ${feedName} transaction feed by date range`, function () {
+```
+
+Next, we use a custom Cypress command `cy.database()` to find some transactions from the database.
+
+```jsx
+cy.database("find", "transactions").then((transaction: Transaction) => {
+```
+
+Then, we click on the appropriate tab for our feed.
+
+```jsx
+cy.getBySelLike(feed.tab).click().should("have.class", "Mui-selected")
+```
+
+![](/images/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range/Screen_Shot_2021-09-16_at_9.42.01_AM.png)
+
+Next we wait on the intercept associated with the feed.
+
+```jsx
+cy.wait(`@${feed.routeAlias}`)
+  .its("response.body.results")
+  .as("unfilteredResults")
+```
+
+![](/images/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range/Screen_Shot_2021-09-16_at_9.43.33_AM.png)
+
+Next, we use another custom Cypress command `cy.pickDateRange()` to pick select the dates we want.
+
+```jsx
+cy.pickDateRange(dateRangeStart, dateRangeEnd)
+```
+
+![](/images/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range/Screen_Shot_2021-09-16_at_9.43.54_AM.png)
+
+Then, we wait on the intercept associated with the feed and grab the results from the reponse.
+
+```jsx
+cy.wait(`@${feed.routeAlias}`).its("response.body.results")
+```
+
+![](/images/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range/Screen_Shot_2021-09-16_at_9.46.05_AM.png)
+
+We then confirm that all of the results are displayed in the UI.
+
+```jsx
+cy.getBySelLike("transaction-item").should("have.length", transactions.length)
+```
+
+![](/images/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range/Screen_Shot_2021-09-16_at_9.47.48_AM.png)
+
+Then we loop through all of the transactions and make sure that all of the transaction dates are within the correct range.
+
+- `startOfDayUTC` is a utility function that can be found in `src/utils/transactionUtils.ts`
+- `isWithinInterval` is a function from the [date-fns](https://date-fns.org/) library.
+
+```jsx
+transactions.forEach(({ createdAt }) => {
+  const createdAtDate = startOfDayUTC(new Date(createdAt))
+
+  expect(
+    isWithinInterval(createdAtDate, {
+      start: startOfDayUTC(dateRangeStart),
+      end: dateRangeEnd,
+    }),
+    `transaction created date (${createdAtDate.toISOString()}) 
+                  is within ${dateRangeStart.toISOString()} 
+                  and ${dateRangeEnd.toISOString()}`
+  ).to.equal(true)
+})
+```
+
+We then use `cy.log()` to output a custom message to the Cypress Command Log.
+
+```jsx
+cy.log("Clearing date range filter. Data set should revert")
+```
+
+![](/images/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range/Screen_Shot_2021-09-16_at_9.55.33_AM.png)
+
+Next, we clear the date range picker.
+
+```jsx
+cy.getBySelLike("filter-date-clear-button").click({
+  force: true,
+})
+```
+
+![](/images/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range/Screen_Shot_2021-09-16_at_9.57.16_AM.png)
+
+Finally, we make sure that all of the transactions are displayed now that we have cleared the date range picker, meaning that we are no longer filtering the results.
+
+```jsx
+cy.get("@unfilteredResults").then((unfilteredResults) => {
+  cy.wait(`@${feed.routeAlias}`)
+    .its("response.body.results")
+    .should("deep.equal", unfilteredResults)
+  cy.visualSnapshot("Unfiltered Transactions")
+})
+```
+
+![](/images/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range/Screen_Shot_2021-09-16_at_9.58.15_AM.png)
