imported all RWE examples

--- a/content/real-world-examples/transaction-view/rejects-a-transaction-request.mdx
+++ b/content/real-world-examples/transaction-view/rejects-a-transaction-request.mdx
@@ -1,10 +1,5 @@
 # rejects a transaction request
 
-Ready for Review: Yes
-Section: Real World Examples, Transaction View
-Status: Migrated
-Title Approved: No
-
 Before continuing, make sure you have read the [Transaction View Overview & Setup](Transaction%20View%20Overview%20&%20Setup%20de652b8e362149babd9b8a5a787d996e.md) lesson first.
 
 ```jsx
@@ -34,21 +29,19 @@ cy.visit(`/transaction/${ctx.transactionRequest!.id}`);
 Next, we click on the "Reject Request" button and wait on the `@updateTransaction` intercept and confirm that this intercepts status code is `204`.
 
 ```jsx
-cy.getBySelLike("reject-request").click();
-    cy.wait("@updateTransaction").its("response.statusCode").should("equal", 204);
-
+cy.getBySelLike("reject-request").click()
+cy.wait("@updateTransaction").its("response.statusCode").should("equal", 204)
 ```
 
-![Screen Shot 2021-09-16 at 9.24.53 AM.png](rejects%20a%20transaction%20request%204047f0467e8a466cb61be24a7442564c/Screen_Shot_2021-09-16_at_9.24.53_AM.png)
+![](/images/real-world-examples/transaction-view/rejects-a-transaction-request/Screen_Shot_2021-09-16_at_9.24.53_AM.png)
 
-![Screen Shot 2021-09-16 at 9.25.17 AM.png](rejects%20a%20transaction%20request%204047f0467e8a466cb61be24a7442564c/Screen_Shot_2021-09-16_at_9.25.17_AM.png)
+![](/images/real-world-examples/transaction-view/rejects-a-transaction-request/Screen_Shot_2021-09-16_at_9.25.17_AM.png)
 
 Finally, we make sure the reject request button is no longer in the `DOM` and that the transaction detail header is visible.
 
 ```jsx
-cy.getBySelLike("reject-request").should("not.exist");
-    cy.getBySel("transaction-detail-header").should("be.visible");
-
+cy.getBySelLike("reject-request").should("not.exist")
+cy.getBySel("transaction-detail-header").should("be.visible")
 ```
 
-![Screen Shot 2021-09-16 at 9.25.33 AM.png](rejects%20a%20transaction%20request%204047f0467e8a466cb61be24a7442564c/Screen_Shot_2021-09-16_at_9.25.33_AM.png)
+![](/images/real-world-examples/transaction-view/rejects-a-transaction-request/Screen_Shot_2021-09-16_at_9.25.33_AM.png)
