--- a/content/real-world-examples/notifications/notifications-overview-and-setup.mdx
+++ b/content/real-world-examples/notifications/notifications-overview-and-setup.mdx
@@ -1,13 +1,8 @@
 # Notifications Overview & Setup
 
-Ready for Review: Yes
-Section: Notifcations, Real World Examples
-Status: Migrated
-Title Approved: No
-
 In this section, we will be discussing the various tests located within the `cypress/tests/ui/notifications.spec.ts` file.
 
-Let's break down what is happening within the `beforeEach()`  as it is essential to understand what is going on since this hook is running before each test.
+Let's break down what is happening within the `beforeEach()` as it is essential to understand what is going on since this hook is running before each test.
 
 ## beforeEach()
 
@@ -36,18 +31,16 @@ You can find out more information about the custom Cypress commands used [here](
 First, we are using a custom Cypress task to seed our database.
 
 ```jsx
-cy.task("db:seed");
-
+cy.task("db:seed")
 ```
 
 Then, we are using `cy.intercept()` to intercept several requests and aliasing them to be used later on within our tests.
 
 ```jsx
-cy.intercept("GET", "/notifications*").as("getNotifications");
-    cy.intercept("POST", "/transactions").as("createTransaction");
-    cy.intercept("PATCH", "/notifications/*").as("updateNotification");
-    cy.intercept("POST", "/comments/*").as("postComment");
-
+cy.intercept("GET", "/notifications*").as("getNotifications")
+cy.intercept("POST", "/transactions").as("createTransaction")
+cy.intercept("PATCH", "/notifications/*").as("updateNotification")
+cy.intercept("POST", "/comments/*").as("postComment")
 ```
 
 Finally, we are using another custom Cypress command `cy.databse()` to retrieve some users from the database and store them on the `ctx` object. This object and these users will be used later on within our tests.
@@ -55,9 +48,8 @@ This is an example of "Data Driven Testing" where instead of hard coding your da
 
 ```jsx
 cy.database("filter", "users").then((users: User[]) => {
-      ctx.userA = users[0];
-      ctx.userB = users[1];
-      ctx.userC = users[2];
-    });
-
+  ctx.userA = users[0]
+  ctx.userB = users[1]
+  ctx.userC = users[2]
+})
 ```
