--- a/content/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request.mdx
+++ b/content/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request.mdx
@@ -1,10 +1,5 @@
 # does not display accept reject buttons on completed request
 
-Ready for Review: Yes
-Section: Real World Examples, Transaction View
-Status: Migrated
-Title Approved: No
-
 Before continuing, make sure you have read the [Transaction View Overview & Setup](Transaction%20View%20Overview%20&%20Setup%20de652b8e362149babd9b8a5a787d996e.md) lesson first.
 
 ```jsx
@@ -42,7 +37,7 @@ cy.database("find", "transactions", {
 
 ```
 
-![Screen Shot 2021-09-16 at 9.22.00 AM.png](does%20not%20display%20accept%20reject%20buttons%20on%20complete%200598a27d716147bf84eab974a88fa4b0/Screen_Shot_2021-09-16_at_9.22.00_AM.png)
+![](/images/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request/Screen_Shot_2021-09-16_at_9.22.00_AM.png)
 
 Once we locate the transaction, we then navigate the application to the specific transactions screen.
 
@@ -54,8 +49,7 @@ cy.visit(`/transaction/${transactionRequest!.id}`);
 Next, we wait for the `@getNotifications` intercept.
 
 ```jsx
-cy.wait("@getNotifications");
-
+cy.wait("@getNotifications")
 ```
 
 []()
@@ -63,12 +57,11 @@ cy.wait("@getNotifications");
 Finally, we confirm that certain elements are visible or not visible.
 
 ```jsx
-cy.getBySel("nav-top-notifications-count").should("be.visible");
-      cy.getBySel("transaction-detail-header").should("be.visible");
-      cy.getBySel("transaction-accept-request").should("not.exist");
-      cy.getBySel("transaction-reject-request").should("not.exist");
-      cy.getBySel("transaction-detail-header").should("be.visible");
-
+cy.getBySel("nav-top-notifications-count").should("be.visible")
+cy.getBySel("transaction-detail-header").should("be.visible")
+cy.getBySel("transaction-accept-request").should("not.exist")
+cy.getBySel("transaction-reject-request").should("not.exist")
+cy.getBySel("transaction-detail-header").should("be.visible")
 ```
 
-![Screen Shot 2021-09-16 at 9.22.50 AM.png](does%20not%20display%20accept%20reject%20buttons%20on%20complete%200598a27d716147bf84eab974a88fa4b0/Screen_Shot_2021-09-16_at_9.22.50_AM.png)
+![](/images/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request/Screen_Shot_2021-09-16_at_9.22.50_AM.png)
